updated the swagger and add the authentication as middleware
